--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -1,22 +1,23 @@
 .bodyContainer {
   width: 100%;
-  margin-top: 10%;
+  /* margin-top: 10%; */
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: whitesmoke;
+}
+
+.header {
+  padding-bottom: 40px;
+  text-align: center;
   text-shadow:
   .5px .5px 0 #a7a7a7,
   -.5px .5px 0 #a7a7a7,
   -.5px -.5px 0 #a7a7a7,
   .5px -.5px 0 #a7a7a7,
   0px 4px 0px #a7a7a7;
-}
-
-.header {
-  padding-bottom: 40px;
-  text-align: center;
 }
 
 .header h1 {
