--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -6,7 +6,7 @@
   flex-flow: row wrap;
   padding: 20px 0 60px 0;
   z-index: 3;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
 }
 
 .buttonBar {
@@ -40,17 +40,20 @@
   font-weight: 600;
   background-color: whitesmoke;
   color: rgb(255, 115, 0);
+  /* color: rgba(119, 0, 255); */
   transform: translateY(-6px);
 }
 
 .navbarButton:hover .buttonFront {
   background-color: rgb(255, 115, 0);
+  /* background-color: rgba(119, 0, 255); */
   color: whitesmoke;
   transition: .3s ease-in 0s all;
   }
 
 .navbarButton:hover {
   background-color: rgb(190, 86, 0);
+  /* background-color: rgb(70, 0, 150); */
   transition: .3s ease-in 0s all;
 }
 
